# libappanvil

./: .bzrignore  .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .pydevproject  .shellcheckrc  CMakeLists.txt  COPYING.GPL  Makefile  README  README.md  af_rule.cc  af_unix.cc  af_unix.h  apparmor-parser.spec.in  base_cap_names.h  capability.h  cmake_uninstall.cmake.in  common_optarg.c  common_optarg.h  dbus.c  dbus.cc  dbus.h  default_features.c  features.c  features.h  file_cache.h  immunix.h  kernel_interface.c  kernel_interface.h  lib.c  lib.h  libappanvil.pc.in  mount.c  mount.cc  mount.h  network.c  network.h  (+32 more)
aa-replace/: CMakeLists.txt
aa-replace/src/: aa-replace.cc  aa-replace.h  main.cc
changehat/libapparmor/doc/: Makefile.am  aa_change_hat.pod  change_hat.pod
changehat/libapparmor/src/: Makefile.am  aalogparse.h  apparmor.h  change_hat.c  grammar.y  libaalogparse.c  libapparmor.map  parser.h  scanner.l  tst_aalogmisc.c
changehat/libapparmor/swig/python/: Makefile.am
deprecated/management/apparmor-dbus/: README  autogen.sh  configure.in
deprecated/management/apparmor-dbus/src/: aadbus.c
deprecated/management/profile-editor/src/: Configuration.h  Makefile.am  ProfileDirectoryTraverser.h  ProfileTextCtrl.cpp  ProfileTextCtrl.h  SearchAllProfiles.cpp  SearchAllProfiles.h  profileeditor.cpp  profileeditor.h
deprecated/management/profile-editor/src/wxStyledTextCtrl/: Editor.cxx  ExternalLexer.h  KeyWords.cxx  Makefile.am  PlatWX.cpp  SciLexer.h  Scintilla.iface  ScintillaBase.cxx  ScintillaWX.cpp  ScintillaWX.h  stc.cpp  stc.h
libraries/libapparmor/doc/: Makefile.am  aa_change_hat.pod  aa_change_profile.pod  aa_features.pod  aa_find_mountpoint.pod  aa_getcon.pod  aa_kernel_interface.pod  aa_policy_cache.pod  aa_query_label.pod  aa_splitcon.pod  aa_stack_profile.pod
libraries/libapparmor/src/: Makefile.am  aalogparse.h  apparmor.h  change_hat.c  features.c  grammar.y  kernel.c  kernel_interface.c  libaalogparse.c  libapparmor.map  libimmunix_warning.c  policy_cache.c  private.c  private.h  scanner.l  tst_aalogmisc.c  tst_kernel.c
libraries/libapparmor/swig/python/: Makefile.am  __init__.py  setup.py.in
libraries/libapparmor/swig/python/test/: Makefile.am  (+2 more)
libraries/libapparmor/swig/ruby/: Makefile.am  extconf.rb
management/apparmor-dbus/src/: Makefile.am  Makefile.in  aadbus.c
management/applets/apparmorapplet-gnome/: AppArmor_Monitor_Factory.server.in  Makefile.am  Makefile.in  aclocal.m4  apparmorapplet-gnome.spec  configure  configure.in
management/applets/apparmorapplet-gnome/pixmaps/: Makefile  Makefile.am  Makefile.in
management/applets/apparmorapplet-gnome/po/: af.po  apparmorapplet.pot  ar.po  bg.po  bn.po  cs.po  de.po  el.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  he.po  hi.po  hu.po  it.po  ja.po  ka.po  km.po  ko.po  lo.po  lt.po  nb.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sr.po  sv.po  ta.po  th.po  zh_CN.po  zh_TW.po
management/applets/apparmorapplet-gnome/src/: Makefile.am  Makefile.in  apparmor-applet.c  apparmor-applet.h  preferences_dialog.c  preferences_dialog.h  reject_list.c  reject_list.h
management/libaalogparse/: ChangeLog  LIBAALOGPARSE.IS.DEPRECATED  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  libaalogparse.spec
management/libaalogparse/src/: Makefile.am  Makefile.in  aalogparse.h  grammar.c  grammar.h  grammar.y  libaalogparse.c  scanner.c  scanner.h  scanner.l
management/libaalogparse/swig/: Makefile.in
management/libaalogparse/swig/SWIG/: libaalogparse.i
management/libaalogparse/swig/perl/: AppArmorLogRecordParser.pm  Makefile.PL  Makefile.am  Makefile.in  libaalogparse_wrap.c
management/libaalogparse/swig/python/: AppArmorLogRecordParser.py  Makefile.am  Makefile.in  aalogrecordparse_wrap.c
management/libaalogparse/swig/ruby/: AppArmorLogRecordParser_wrap.c  Makefile.am  Makefile.in  extconf.rb
management/libaalogparse/testsuite/: Makefile.am  Makefile.in  test_multi.c
management/libaalogparse/testsuite/config/: Makefile.in
management/libaalogparse/testsuite/lib/: Makefile.in
management/libaalogparse/testsuite/libaalogparse.test/: Makefile.in
management/libaalogparse/testsuite/test_multi/: testcase1.in  testcase1.out  testcase10.out  testcase11.out  testcase2.out  testcase3.out  testcase4.out  testcase5.out  testcase6.out  testcase7.out  testcase8.out  testcase9.out
management/libaaprofileparse/src/: AppArmor.g  AppArmor.tokens  AppArmorLexer.c  AppArmorLexer.h  AppArmorParser.c  AppArmorParser.h  AppArmor__.g  DataNodes.c  DataNodes.h  Exceptions.h  Makefile.am  Nodes.h  ParseNode.c  ParseNode.h  Types.h  libaaprofileparse.c  libaaprofileparse.h
management/libaaprofileparse/src/antlr/: Makefile.am
management/libaaprofileparse/testsuite/: Makefile.am  test_multi.c
management/libaaprofileparse/testsuite/config/: unix.exp
management/libaaprofileparse/testsuite/lib/: Makefile.am  libaaprofileparse_init.exp
test/: CMakeLists.txt  simple_tests
test/add-untouched/: test4_add.sd  test7_add.sd  test8_add.sd
test/additional_profiles/add-untouched/: test1_add.sd
test/additional_profiles/broken/: broken_1.sd  broken_2.sd  broken_3.sd  broken_4.sd
test/additional_profiles/edit-untouched/: test4_edit.sd  test7_edit.sd
test/additional_profiles/remove-untouched/: test3_remove.sd  test4_remove.sd
test/e2e/: CMakeLists.txt
test/e2e/src/: abstractions.cc  add_function.cc  add_function.hh  common.inl  edit_function.cc  edit_function.hh  file_mode.cc  file_rules.cc  parser.cc  parser.hh  remove_function.cc  remove_function.hh
test/e2e/src/tree/: abstraction_rule_test.cc  file_rule_test.hh
test/edit-untouched/: test2_edit.sd
test/remove-untouched/: test2-remove.sd
test/simple/: CMakeLists.txt  disabled_tests.cmake
test/simple/src/: main.cc
test/src/: main.cc
test/src/e2e/: CMakeLists.txt
test/src/simple/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/src/: add_function.cc  edit_function.cc  parser.cc  remove_function.cc  remove_function.hh
test/unit/src/tree/: abstraction_rule_test.hh  file_rule_test.cc
(+2971 files in other folders)
